fix(service): fix RoutingRulesImpl and add new words in the list od keywords